force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/cm_Discount_for_Auto_Debit__c.field-meta.xml
<CustomField>
    <fullName>cm_Discount_for_Auto_Debit__c</fullName>
    <label>Discount for Auto Debit</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>