force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/cm_Maximum_90_Day_Lates__c.field-meta.xml
<CustomField>
    <fullName>cm_Maximum_90_Day_Lates__c</fullName>
    <label>Maximum 90 Day Lates</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>