force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/cm_Minimum_Age_for_Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>cm_Minimum_Age_for_Auto_Approval__c</fullName>
    <inlineHelpText>Minimum age of applicant&apos;s to be approved</inlineHelpText>
    <label>Minimum Age for Auto Approval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>