force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/cm_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>cm_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal &amp; Interest</fullName>
            </value>
            <value>
                <fullName>Principal + Interest</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>