force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/cm_Rate_lookup__c.field-meta.xml
<CustomField>
    <fullName>cm_Rate_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate (lookup)</label>
    <referenceTo>LLC_BI__Rate__c</referenceTo>
    <relationshipLabel>Pricing Matrix</relationshipLabel>
    <relationshipName>Pricing_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>