force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/cmLien_Position__c.field-meta.xml
<CustomField>
    <fullName>cmLien_Position__c</fullName>
    <label>Lien Position</label>
    <length>80</length>
    <type>Text</type>
</CustomField>