force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/Index_Rate_Value_Formula__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate_Value_Formula__c</fullName>
    <formula>cm_Rate_lookup__r.LLC_BI__Current_Value__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Rate Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>